adding script and text to html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     adding a new text 
-    
+    <div class="container">
+        <div class="col-mdd-12">
+            testing card
+        </div>
+    </div>
 </body>
+<scripot></scripot>
 </html>
