--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
+    <ul>
+        <li>
+            item1
+        </li>
+        <li>
+            item2
+        </li>
+        <li>
+            item3
+        </li>
+    </ul>
     
 </body>
 </html>
