basic markup for news

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-     
+     <div class="news-wrapper">
+        <div>news 1</div>
+        <div>news 2</div>
+        <div>news 3</div>
+     </div>
 </body>
 </html>
